# Mokka

./: .gitignore  .gitmodules  CMakeLists.txt  MokkaTester.java  README.md
Examples/: BasicRedSquare.java
Mokka/: Color.java  Init.java  Internal.java  Material.java  Mokka.java  MovementController2D.java  Options.java  PlayerController2D.java  Shader.java  Texture.java  VertexArray.java  VertexBuffer.java  Window.java
Mokka/Maths/: Matrix4f.java  Vector2f.java  Vector3f.java  Vector4f.java
Mokka/Natives/: CMakeLists.txt
Mokka/Natives/src/: Mokka.cpp  Mokka.h  mka_Maths.cpp  mka_Maths.h  mka_Renderer.h  mka_Shader.cpp  mka_Shader.h  mka_Shape.cpp  mka_Shape.h  mka_Texture.cpp  mka_Texture.h  mka_VertexArray.cpp  mka_VertexArray.h  mka_VertexBuffer.h  mka_VertexBufferLayout.h  mka_Window.cpp  mka_Window.h
Mokka/Shape/: AbstractShape.java  Rect.java
Mokka/jni/: CMakeLists.txt
Mokka/jni/src/: Makefile  Mokka.cpp  Mokka.h  mka_IndexBuffer.cpp  mka_IndexBuffer.h  mka_Renderer.cpp  mka_Shader.h  mka_Shape.h  mka_Texture.cpp  mka_Texture.h  mka_VertexBuffer.cpp  mka_VertexBuffer.h  mka_VertexBufferLayout.cpp  mka_Window.cpp
Mokka/res/Shaders/: BasicColor.shader  BasicTexture.shader
Testers/Examples/: BasicExample.java
